modificato il caricamento di tutte le risorse - immagini, font